// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`automation - planning input - openAI > input value 1`] = `
[
  {
    "locate": {
      "id": "fbc2d002",
      "prompt": "the input field with placeholder 'What needs to be done?'",
    },
    "param": {
      "value": "learning english",
    },
    "thought": undefined,
    "type": "Input",
  },
]
`;

exports[`automation - planning input - openAI > input value 2`] = `
[
  {
    "locate": {
      "id": "fbc2d002",
      "prompt": "the input field with placeholder 'What needs to be done?'",
    },
    "param": {
      "value": "learning english",
    },
    "thought": undefined,
    "type": "Input",
  },
  {
    "locate": null,
    "param": {
      "value": "Enter",
    },
    "thought": undefined,
    "type": "KeyboardPress",
  },
]
`;

exports[`automation - planning input - openAI > input value 3`] = `
[
  {
    "locate": {
      "id": "fbc2d002",
      "prompt": "the input field with placeholder 'What needs to be done?'",
    },
    "param": {
      "value": "learning english",
    },
    "thought": undefined,
    "type": "Input",
  },
]
`;

exports[`automation - planning input - openAI > input value 4`] = `
[
  {
    "locate": {
      "id": "fbc2d002",
      "prompt": "the input field with placeholder 'What needs to be done?'",
    },
    "param": {
      "value": "learning english",
    },
    "thought": undefined,
    "type": "Input",
  },
  {
    "locate": null,
    "param": {
      "value": "Enter",
    },
    "thought": undefined,
    "type": "KeyboardPress",
  },
]
`;

exports[`automation - planning input - openAI > input value 5`] = `
[
  {
    "locate": {
      "id": "fbc2d002",
      "prompt": "the input field with placeholder 'What needs to be done?'",
    },
    "param": {
      "value": "learning english",
    },
    "thought": undefined,
    "type": "Input",
  },
]
`;

exports[`automation - planning input - openAI > input value 6`] = `
[
  {
    "locate": {
      "id": "fbc2d002",
      "prompt": "the input field with placeholder 'What needs to be done?'",
    },
    "param": {
      "value": "learning english",
    },
    "thought": undefined,
    "type": "Input",
  },
  {
    "locate": null,
    "param": {
      "value": "Enter",
    },
    "thought": undefined,
    "type": "KeyboardPress",
  },
]
`;

exports[`automation - planning input - openAI > input value 7`] = `
[
  {
    "locate": {
      "id": "fbc2d002",
      "prompt": "the input field with placeholder 'What needs to be done?'",
    },
    "param": {
      "value": "learning english",
    },
    "thought": undefined,
    "type": "Input",
  },
]
`;

exports[`automation - planning input - openAI > input value 8`] = `
[
  {
    "locate": {
      "id": "fbc2d002",
      "prompt": "the input field with placeholder 'What needs to be done?'",
    },
    "param": {
      "value": "learning english",
    },
    "thought": undefined,
    "type": "Input",
  },
  {
    "locate": null,
    "param": {
      "value": "Enter",
    },
    "thought": undefined,
    "type": "KeyboardPress",
  },
]
`;
